<?xml version="1.0"?>
<package format="2">
  <name>dyros_canary_controller</name>
  <version>0.0.0</version>
  <description>The dyros_canary_controller package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>GPLv2</license>

  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>roslib</build_depend>
  <exec_depend>roslib</exec_depend>
  <build_depend>realtime_tools</build_depend>
  <exec_depend>realtime_tools</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
