<?xml version="1.0"?>
<package>
  <name>dyros_canary_description</name>
  <version>0.0.1</version>
  <description>dyros canary description</description>

  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>lms1xx</run_depend>

  <export>
  </export>
</package>
